test adjsustments
