# Source/GoalApi/Goal/Dtos/GoalDetailsDto.cs
@@ -6,6 +6,9 @@ namespace GoalApi.Goal.Dtos;
 public class GoalDetailsDto
 {
     public Guid Id { get; init; }
+    public string UserId { get; init; }
+    public string Name { get; init; }
+    public Goals GoalFriendlyName { get; init; }
     public GoalCategories Category { get; init; }
     public UserAdvancement UserAdvancement { get; init; }
     public TimeAvailabilityPerDay TimeAvailabilityPerDay { get; init; }
@@ -15,4 +18,5 @@ public class GoalDetailsDto
     public Experience Experience { get; init; }
     
     public LearningType LearningType { get; init; }
+    public string UserInput { get; init; }
 }
