# Source/GoalApi/Models/Goal.cs
@@ -9,6 +9,7 @@ public class Goal : IEntity
     public Guid Id { get; init; }
     public string UserId { get; init; }
     public string Name { get; init; }
+    public Goals GoalFriendlyName { get; init; }
     public GoalCategories Category { get; init; }
     public UserAdvancement UserAdvancement { get; init; }
     public TimeAvailabilityPerDay TimeAvailabilityPerDay { get; init; }
